2008-03-15 Cedric GESTES <ctaf42@gmail.com>
	* emacs: beginning support for gtk-ctafconf (menubar/scrollbar/toolbar)

2008-03-11  Cedric GESTES  <gestes@aldebaran-robotics.com>
	* emacs: added cmake-mode

2008-03-04  Cedric GESTES  <gestes@aldebaran-robotics.com>
	* emacs: automatic compilation window scroll
	* env: added PATH for /sbin

2008-03-01  Cedric GESTES  <ctaf42@gmail.com>
	* emacs: dont call emacs debugger on error (avoid annoying popup)
	* emacs: added auto perl-mode for file with name matching .pl
	* emacs: F8, compilation mode is faster, and window bigger

2008-02-26 CTAF <>
	* bash/zsh : support white on black and black on white !!!!
	* zsh: remove a space in the prompt

2008-02-25 CTAF  <ctaf42@gmail.com> -- 1.0.46
	* etc/grk/gnome.grk: removed shortkey for metacity
	* emacs: perl template begin with #!/usr/bin/env perl
	* colorsvn/colorcvs

2008-02-13 CTAF <>
	* new ct-newuser : configure the ctafconf for a new user from the system install
	* new ct-autostart : startup file, launched at X startup

2008-02-11 CTAF <>
	* emacs : better indentation

2008-02-11 CTAF <> -- 1.0.45
	* replacer : safer
	* colorsvn : header (filename) are yellow (used by replacer)

2008-02-10 CTAF <>
	* ct-profile : remove ctafconf_config, for epita use ct-env
	* alias : a = autoreconf -isvf
	* zsh : completion for m, ma, mac, make_real, c
	* ct-installconf : dont ask anything
	* ct-updateconf : autoupdate the ctafconf
	* ct-profile : added backlist for ctafconf package
	* ct-installconf : merged xsession and xinitrc
	* wallpaper : removed from ct-profile, put your wallpaper in:
	  ~/.config/ctafconf/perso/wallpaper.jpg
	* ct-add-wallpp : removed
	* env : only one user-profile, optional
	* zsh : noglob for replacer
	* zsh : dont expire duplicate entry in the log
	* emacs : M-(left,right,up,down): navigate through buffer (using tabbar)

2008-02-09 CTAF <>
	* emacs : better template with author(s)
	* emacs : better Makefile template with pkg-config support

2008-02-01 CTAF <>