@@ -7,20 +7,23 @@
 ;; to disable it
 ;;(defvar enable-functionnality nil)
 
+;;scrollbar
 (setq enable-scroll-bar nil)
+
+;;menubar
 (setq enable-menu-bar nil)
+
+;;toolbar
 (setq enable-tool-bar nil)
 
-
-
 ;;enable/disable the zone screensaver
-(defvar enable-zone nil)
+(setq enable-zone nil)
 
 ;;enable/disable the cedet environnement
-(defvar enable-cedet nil)
+(setq enable-cedet nil)
 
 ;;enable/disable the ecb ide
-(defvar enable-ecb nil)
+(setq enable-ecb nil)
 
 ;;enable/disable ilisp
-(defvar enable-ilisp nil)
+(setq enable-ilisp nil)
