@@ -28,6 +28,7 @@ alias_set - 'pushd -1'
 #############################
 alias_set c './configure'
 alias_set a 'autoreconf -isvf'
+alias_set smi 'sudo make install'
 alias_set m '~/.config/ctafconf/bin/colorwarper make'
 alias_set md '~/.config/ctafconf/bin/colorwarper make distclean'
 alias_set ma '~/.config/ctafconf/bin/colorwarper make clean all'
