@@ -1,22 +1,0 @@
-
-
-
-
-;;
-;;nil or t
-(setq ctafconf-ilisp nil)
-
-(setq ctafconf-zone nil)
-
-(setq ctafconf-cedet nil)
-
-(setq ctafconf-ecb nil)
-
-(setq ctafconf-fixed-window-size nil)
-
-(setq ctafconf-fixedsize nil)
-
-(setq ctafconf-menubar t)
-
-(setq ctafconf-custom-template-dir "")
-
