@@ -25,132 +25,9 @@
 
 include:regexp.tpl
 
-input:user-profile
-  overwrite=true
-  output=
+include:ctafconf.tpl
 
-frame:ctafconf
-  string:ctafconf_name
-    desc=
-    regexp=ct-var-regexp
-
-  string:ctafconf_mail
-    regexp=ct-var-regexp
-
-  singlechoice:ctafconf_zprompt
-    desc=choose the zsh prompt you want
-    regexp=ct-var-regexp
-    default=ctaf
-    value=ctaf
-    value=adam1
-    value=adam2
-    value=bart
-    value=zefram
-    value=fade
-    value=redhat
-    value=suse
-    value=walters
-    value=bigfade
-    value=clint
-    value=elite
-    value=elite2
-    value=fire
-    value=off
-    value=olivier
-
-  singlechoice:ctafconf_wm
-    desc=
-    regexp=ct-var-regexp
-    value=fluxbox
-    value=gnome
-    value=kde
-    value=xfce4
-    value=e16
-    value=term
-    value=aterm
-
-  multichoice:ctafconf_color
-    desc=Use color for?  (disabling color could help to remove bug due to color (interacting with nano, or other console text editor))
-    value=svn
-    value=cvs
-    value=make
-    value=gmake
-
-frame:ctafconf
-  desc=This frame let you manage ctafconf packages.
-  button:install
-    action:install
-
-  button:update
-    action:shell
-    cmd=cd ~/.config/ctafconf
-    cmd=svn up
-
-  multichoice:ctafconf_backlist
-    regexp=ct-var-regexp
-#     default=xsession
-    value=zsh
-    value=bash
-    value=ksh
-    value=tcsh
-    value=emacs
-    value=screen
-    value=top
-    value=vim
-    value=e16
-    value=fluxbox
-    value=gnome
-    value=namo
-    value=torsmo
-    value=xsession
-
-  button:Change the wallpaper
-    default=wallpaper
-
-input:emacs.config
-frame:emacs
-  checkbox:enable-scroll-bar
-    regexp=ct-lisp-regexp
-
-  checkbox:enable-menu-bar
-    regexp=ct-lisp-regexp
-
-  checkbox:enable-tool-bar
-    regexp=ct-lisp-regexp
-
-  checkbox:ctafconf-ilisp
-    regexp=ct-lisp-regexp
-
-  checkbox:ctafconf-zone
-    regexp=ct-lisp-regexp
-
-  checkbox:ctafconf-cedet
-    regexp=ct-lisp-regexp
-
-  checkbox:ctafconf-ecb
-    regexp=ct-lisp-regexp
-
-  checkbox:ctafconf-fixed-window-size
-    regexp=ct-lisp-regexp
-
-  checkbox:ctafconf-fixedsize
-    regexp=ct-lisp-regexp
-
-  checkbox:ctafconf-menubar
-    desc="draw the menu bar?"
-    default=nil
-
-  folder:ctafconf-custom-template-dir
-    desc="custom template folder for emacs"
-
-  checkbox:fixed-windows-size
-    desc="start emacs with a fixed windows size?"
-    default=nil
-
-  int:window-width
-    df=
-  int:window-height
-    dtc=
+include:emacs.tpl
 
 
 frame:SHELL
